--- a/package.json
+++ b/package.json
@@ -1,25 +1,52 @@
 {
   "name": "rkc.pfm.front",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "npx expo start",
-    "android": "npx expo start --android",
-    "ios": "npx expo start --ios",
-    "web": "npx expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "npx expo start --web",
+    "lint": "eslint ."
+  },
+  "eslintConfig": {
+    "extends": "universe/native"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@expo/metro-runtime": "~3.1.3",
+    "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@supabase/supabase-js": "^2.39.3",
+    "@types/i18n-js": "^3.8.9",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.6.7",
+    "consul-node": "^0.0.2",
     "expo": "~50.0.6",
+    "expo-localization": "~14.8.3",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "i18n-js": "^4.4.2",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "react-hook-form": "^7.50.1",
+    "react-native": "0.73.4",
+    "react-native-svg": "14.1.0",
+    "react-native-web": "~0.19.6",
+    "zod": "^3.22.4",
+    "expo-navigation-bar": "~2.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/consul": "^0.40.3",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "eslint": "^8.56.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.1.3"
   },
   "private": true
