--- a/package.json
+++ b/package.json
@@ -19,25 +19,32 @@
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.39.3",
     "@types/i18n-js": "^3.8.9",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
+    "expo-dev-client": "~3.3.8",
+    "expo-linear-gradient": "~12.7.1",
     "expo-localization": "~14.8.3",
     "expo-navigation-bar": "~2.8.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "i18n-js": "^4.4.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "14.1.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "zod": "^3.22.4",
-    "expo-dev-client": "~3.3.8"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
