--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
 		"resolveJsonModule": true,
 		"forceConsistentCasingInFileNames": true,
 		"jsx": "react-jsx",
+		"strictPropertyInitialization": false
 	}
 }
