--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rkc.pfm.front",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "npx expo start",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
     "web": "npx expo start --web",
     "lint": "eslint ."
   },
@@ -16,6 +16,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -41,7 +42,9 @@
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-month-year-picker": "^1.9.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
